config: revetment コメントの修正と図のデフォルト値の調整
- What:
  - params_sample/No4, No7: revetment の行末コメントを「護岸内側の点をピックアップ」から「擁壁の位置を設定するため擁壁内側で擁壁にできるだけ近い点をピックアップ」に変更。
  - params_sample/base.yaml: plot.font.legend を 12→10、plot.line.data を 5→1.5 に変更。

- Why:
  - revetment の意味を説明するコメントを分かりやすくするため。図の凡例サイズとデータ曲線の線幅のデフォルトを調整するため。

- Impact:
  - 数値結果・API: 影響なし。出力画像の見た目のみ（凡例がやや小さく、データ線が細くなる）。

- Validation:
  - run_case を実行し、CSV・数値は従来どおりであること、保存図の凡例・曲線の太さが意図どおりであることを目視確認。

--- a/params_sample/No4-friction-8mm.yaml
+++ b/params_sample/No4-friction-8mm.yaml
@@ -2,4 +2,4 @@
 points:
   point1: [-0.036713, 0.373845, -1.278917]   # 水槽の点
   point2: [-0.029054, -0.255728, -0.746375]   # 土層の点
-  revetment: [0.011898, 0.086200, -0.854366]  # 護岸内側の点をピックアップ
+  revetment: [0.011898, 0.086200, -0.854366]   # 擁壁の位置を設定するため擁壁内側で擁壁にできるだけ近い点をピックアップ
