--- a/params_sample/No7-friction-8mm.yaml
+++ b/params_sample/No7-friction-8mm.yaml
@@ -2,4 +2,4 @@
 points:
   point1: [-0.017886, 0.374809,-1.207308]  # 水槽の点
   point2: [-0.050339,-0.274244,-0.733318]   # 土層の点
-  revetment: [0.015795, 0.111434, -0.836145]  # 護岸内側の点をピックアップ
+  revetment: [0.015795, 0.111434, -0.836145]  # 擁壁の位置を設定するため擁壁内側で擁壁にできるだけ近い点をピックアップ
